re PR tree-optimization/34140 (ICE in is_hidden_global_store, at tree-ssa-sink.c:207)

PR tree-optimization/34140
	* tree-if-conv.c (if_convertible_phi_p): Fail if BB other than
	loop->header has virtual phi nodes.

	* gcc.c-torture/compile/20071128-1.c: New test.

From-SVN: r130494